added: api update and delete product
